--- a/DespesaDigital.csproj
+++ b/DespesaDigital.csproj
@@ -155,6 +155,7 @@
     <Compile Include="Code\DTO\dtoDespesa\dtoDespesaItens.cs" />
     <Compile Include="Code\DTO\dtoDespesa\dtoRelDespesaPorCodigo.cs" />
     <Compile Include="Code\DTO\dtoDespesa\dtoRelDespesaPorDepartamento.cs" />
+    <Compile Include="Code\DTO\dtoDespesa\dtoRelItensMaisAdquiridos.cs" />
     <Compile Include="Code\DTO\dtoFormaPagamento\dtoFormaPagamento.cs" />
     <Compile Include="Code\DTO\dtoFornecedor\dtoFornecedor.cs" />
     <Compile Include="Code\DTO\dtoFornecedor\dtoFornecedorContato.cs" />
@@ -208,6 +209,12 @@
     </Compile>
     <Compile Include="Report\rptDespesa\frmRelDespesaPorDepartamento.Designer.cs">
       <DependentUpon>frmRelDespesaPorDepartamento.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Report\rptItem\frmRelItensMaisAdquiridos.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="Report\rptItem\frmRelItensMaisAdquiridos.Designer.cs">
+      <DependentUpon>frmRelItensMaisAdquiridos.cs</DependentUpon>
     </Compile>
     <Compile Include="SqlServerTypes\Loader.cs" />
     <Compile Include="Views\Forms\Cadastros\frmCadastro.cs">
@@ -497,6 +504,10 @@
     <EmbeddedResource Include="Report\rptDespesa\relDespesaPorCodigo.rdlc" />
     <EmbeddedResource Include="Report\rptDespesa\relDespesaPorColaborador.rdlc" />
     <EmbeddedResource Include="Report\rptDespesa\relDespesaPorDepartamento.rdlc" />
+    <EmbeddedResource Include="Report\rptItem\frmRelItensMaisAdquiridos.resx">
+      <DependentUpon>frmRelItensMaisAdquiridos.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Report\rptItem\relItensMaisAdquiridos.rdlc" />
     <EmbeddedResource Include="Views\Forms\Cadastros\frmCadastro.resx">
       <DependentUpon>frmCadastro.cs</DependentUpon>
     </EmbeddedResource>
@@ -631,6 +642,7 @@
     <None Include="Properties\DataSources\DespesaDigital.Code.DTO.dtoDespesa.dtoDespesa.datasource" />
     <None Include="Properties\DataSources\DespesaDigital.Code.DTO.dtoDespesa.dtoDespesaItens.datasource" />
     <None Include="Properties\DataSources\DespesaDigital.Code.DTO.dtoDespesa.dtoRelDespesaPorDepartamento.datasource" />
+    <None Include="Properties\DataSources\DespesaDigital.Code.DTO.dtoDespesa.dtoRelItensMaisAdquiridos.datasource" />
     <None Include="Properties\DataSources\DespesaDigital.Code.DTO.dtoFormaPagamento.dtoFormaPagamento.datasource" />
     <None Include="Properties\DataSources\DespesaDigital.Code.DTO.dtoFornecedor.dtoFornecedor.datasource" />
     <None Include="Properties\DataSources\DespesaDigital.Code.DTO.dtoFornecedor.dtoFornecedorContato.datasource" />
